# inventory_master

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  agents.md  plan.md  pyproject.toml
.cursor/: ALIGNMENT_VERIFICATION.md
.cursor/agents/: approver.md  coordinator.md  executor.md  explore.md  implementer.md  planner.md  qa.md  researcher.md  reviewer.md  verifier.md
.cursor/commands/: agents-convert-to-cursor-only.md  agents-init-pack.md  automate-precommit-ci.md  kpi-dash.md  rules-tune.md  skills-init-pack.md  spec-init-constitution.md
.cursor/config/: workspace.json
.cursor/hooks/: preload_docs.yaml
.cursor/rules/: 000-core.mdc  010-tdd.mdc  015-constitution-cursor.mdc  016-agents-cursor-only.mdc  030-commits.mdc  040-ci.mdc  100-python.mdc  110-modern-python.mdc  300-inventory-master-domain.mdc
.cursor/skills/: SKILLS_INVENTORY.md
.cursor/skills/agent-selector/: SKILL.md
.cursor/skills/approval-gate/: SKILL.md
.cursor/skills/audit-query/: SKILL.md
.github/workflows/: ci.yml
config/: project_profile.yaml
docs/: AGENTS.md  AGENTS_AND_SKILLS_GUIDE.md  ARCHITECTURE.md  DEPENDENCY_MAP.md  IMPLEMENTATION_STATUS.md  NEW_AGENTS_AND_SKILLS.md  PROJECT_PLAN.md  WORKFLOW_EXAMPLES.md  WORK_DONE_CHECKLIST.md  constitution.md  everything_integration.md
src/inventory_master/: approve.py  audit.py  cli.py  executor.py  hashing.py  meta_paths.py  models.py  planner.py  reporting.py  snapshot.py
tests/: test_cli_smoke.py  test_executor.py  test_planner.py  test_providers.py  test_scaffold.py  test_snapshot.py
tools/: init_settings.py
(+17 files in other folders)
