[project]
name = "inventory-master"
version = "0.1.0"
description = "Plan-gated folder tidy tool (Everything read-only inventory + transactional apply)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.14.0",
  "black>=26.1.0",
  "isort>=7.0.0",
  "bandit[toml]>=1.8.0",
  "pip-audit>=2.7.0",
  "pre-commit>=4.5.0",
]

[project.scripts]
inventory_master = "inventory_master.cli:main"

[tool.pytest.ini_options]
addopts = "-q --strict-markers --maxfail=1"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 85
precision = 2
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.bandit]
skips = ["B101"]  # allow assert in tests
